--- a/data_registry/Feige_110/manifest.json
+++ b/data_registry/Feige_110/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "G191-B2B",
-  "canonical_name": "G191-B2B",
+  "name": "Feige 110",
+  "canonical_name": "Feige 110",
   "coordinates": {
-    "ra_deg": 76.37757540733,
-    "dec_deg": 52.83108869489
+    "ra_deg": 349.99333201843996,
+    "dec_deg": -5.16560309524
   },
   "star": {
     "otype": null,
-    "sptype": "DA0.8",
+    "sptype": "sdO",
     "parallax_mas": null,
     "rv_kms": null
   },
   "planets": [],
   "summaries": {
-    "auto": "G191-B2B: CALSPEC white dwarf (HST/STIS) | tags: DA0.8, calibrator, ultraviolet"
+    "auto": "Feige 110: CALSPEC subdwarf (HST/STIS) | tags: sdO, calibrator, ultraviolet"
   },
   "provenance": {
     "generated_by": "manual_curated_library",
@@ -22,10 +22,10 @@
   "datasets": {
     "mast": [
       {
-        "obsid": "g191b2b_stiswfcnic_004.fits",
+        "obsid": "feige110_stisnic_008.fits",
         "project": "CALSPEC",
         "instrument_name": "HST/STIS",
-        "target_name": "G191-B2B",
+        "target_name": "Feige 110",
         "filters": "CALSPEC curated",
         "t_min": null,
         "t_max": null
@@ -41,13 +41,13 @@
     "mast_products": {
       "items": [
         {
-          "obsid": "g191b2b_stiswfcnic_004.fits",
-          "productFilename": "g191b2b_stiswfcnic_004.fits",
+          "obsid": "feige110_stisnic_008.fits",
+          "productFilename": "feige110_stisnic_008.fits",
           "productType": "SCIENCE",
           "dataproduct_type": "spectrum",
           "project": "CALSPEC",
-          "description": "Hot DA white dwarf that underpins the CALSPEC UV scale.",
-          "productURL": "https://ssb.stsci.edu/cdbs/calspec/g191b2b_stiswfcnic_004.fits"
+          "description": "Blue subdwarf extending CALSPEC into the far ultraviolet.",
+          "productURL": "https://ssb.stsci.edu/cdbs/calspec/feige110_stisnic_008.fits"
         }
       ],
       "total_count": 1,
